# poetry-scm-version

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/actions/poetry/: action.yml
.github/workflows/: codeql.yml  lint.yml  mypy.yml  test.yml
src/poetry_scm_version/: __init__.py  patch.py  plugin.py
src/poetry_scm_version/config/: __init__.py  schema.json
src/poetry_scm_version/masonry/: api.py
stubs/dunamai/: __init__.pyi
stubs/jsonschema/: __init__.pyi
stubs/poetry/plugins/: __init__.pyi  application_plugin.pyi  base_plugin.pyi  plugin.pyi
stubs/wrapt/: __init__.pyi
tests/: conftest.py  test_config.py  test_patch.py  test_poetry.py
tests/fixtures/: scm.toml
