[build-system]
backend-path = ["src"]
build-backend = "poetry_scm_version.masonry.api"
requires = [
    "dunamai>=1.9.0",
    "poetry>=1.2.0a1",
    "wrapt>=1.13.3"
]

[tool.isort]
combine_as_imports = true
force_grid_wrap = 2
line_length = 88
profile = "black"
skip_gitignore = true

[tool.mypy]
files = ["src", "tests"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
no_implicit_optional = true
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "cleo.*",
    "entrypoints",
    "jsonschema",
    "poetry.*",
    "pyfakefs.*",
    "wrapt"
]

[tool.poetry]
authors = ["Jonathan Green <jonathan@razzard.com>"]
description = "Poetry plugin to set package version from SCM tag."
name = "poetry-scm-version"
packages = [{ include = "poetry_scm_version", from = "src" }]
version = "scm"

[tool.poetry.dependencies]
dunamai = "^1.11.0"
poetry = "^1.2.0a1"
python = "^3.7"
wrapt = "^1.13.3"

[tool.poetry.group.ci.dependencies]
mypy = "^0.931"
pre-commit = "^2.17.0"
tox = "^3.24.5"
tox-gh-actions = "^2.9.1"

[tool.poetry.group.dev.dependencies]
pyfakefs = "^4.5.5"
pytest = "^7.0.1"

[tool.poetry.plugins."poetry.application.plugin"]
poetry-scm-version = "poetry_scm_version.patch:MonkeyPatchPlugin"

[tool.poetry.plugins."poetry.plugin"]
poetry-scm-version = "poetry_scm_version.plugin:ScmVersionPlugin"
